--- a/views/admin/pengelolaan.ejs
+++ b/views/admin/pengelolaan.ejs
@@ -14,7 +14,7 @@
         </div>
       </div>
       <div class="keterangan">
-        <a href="/admin/profile">
+        <a class="namajurusan" href="/admin/profile">
           <span><%= user.jurusan %></span>
         </a>
       </div>
