--- a/public/pengelolaanAdm.css
+++ b/public/pengelolaanAdm.css
@@ -69,7 +69,7 @@ img{
     max-height: 100%;
     height: 32px;
     border-radius: 0px 6px 6px 0px;
-    margin-top: -198px;
+    margin-top: -141px;
     position: absolute;
     z-index: 2;
 
@@ -95,6 +95,10 @@ h4:hover{
 a{
     text-decoration: none;
     color: #c6e29d;
+}
+
+.namajurusan{
+  margin-left: -11px;
 }
 
 .isi{
@@ -159,11 +163,11 @@ span{
   border-style: solid;
   width: 100%;
   height: 93%;
-  max-width: 1220px;   
+  max-width: 1240px;
   margin-top: 25px;
-  margin-left: 290px;
+  margin-left: 260px;
   z-index: 3;
-  text-align: center; 
+  text-align: center;
 }
 
 h3{
