--- a/views/admin/historyAdmin.ejs
+++ b/views/admin/historyAdmin.ejs
@@ -90,7 +90,7 @@
     .then(data => {
         console.log('Received data:', data);
         const listPengajuan = document.getElementById('list-pengajuan');
-        listPengajuan.innerHTML = ''; // Clear previous results
+        listPengajuan.innerHTML = ''; 
 
         data.listPengajuan.forEach(pengajuan => {
             const pengajuanItem = document.createElement('div');
@@ -143,7 +143,7 @@
         })
           .then((response) => {
             if (response.ok) {
-              window.location.href = "/login"; // Redirect to login page after successful logout
+              window.location.href = "/login";
             } else {
               throw new Error("Failed to logout");
             }
