--- a/views/admin/listDisetujui.ejs
+++ b/views/admin/listDisetujui.ejs
@@ -93,7 +93,7 @@
         })
           .then((response) => {
             if (response.ok) {
-              window.location.href = "/login"; // Redirect to login page after successful logout
+              window.location.href = "/login"; 
             } else {
               throw new Error("Failed to logout");
             }
