--- a/views/dosen/changePass.ejs
+++ b/views/dosen/changePass.ejs
@@ -56,7 +56,7 @@
             })
             .then(response => {
                 if (response.ok) {
-                    window.location.href = '/login'; // Redirect to login page after successful logout
+                    window.location.href = '/login'; 
                 } else {
                     throw new Error('Failed to logout');
                 }
