--- a/views/mahasiswa/notifikasi.ejs
+++ b/views/mahasiswa/notifikasi.ejs
@@ -56,6 +56,7 @@ form{
   margin-left: 260px;
   z-index: 3;
   text-align: center;
+  overflow-y: auto;
 }
 
 .list-pengajuan {
@@ -247,7 +248,7 @@ form{
         })
           .then((response) => {
             if (response.ok) {
-              window.location.href = "/login"; // Redirect to login page after successful logout
+              window.location.href = "/login"; 
             } else {
               throw new Error("Failed to logout");
             }
