--- a/views/mahasiswa/status.ejs
+++ b/views/mahasiswa/status.ejs
@@ -107,7 +107,7 @@
         })
           .then((response) => {
             if (response.ok) {
-              window.location.href = "/login"; // Redirect to login page after successful logout
+              window.location.href = "/login";
             } else {
               throw new Error("Failed to logout");
             }
